- fix vertical alignment of table row icon

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -577,7 +577,6 @@ ul.folder-tabs.icon li a > span > span {
 }
 
 .stable-body .icon {
-  display: inline-block;
   height: 16px;
 }
 
